--- a/template.html
+++ b/template.html
@@ -7,8 +7,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="styles/normalize.css">
+  <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
   <header>
@@ -49,7 +49,7 @@
   </main>
   <footer>
     <div id="legal">
-      &copy; 2022 Company Name. All Rights Reserved.
+      &copy; 2022 Cross Auto. All Rights Reserved.
     </div>
     <nav>
       <ul>
