Set up template footer page names

--- a/template.html
+++ b/template.html
@@ -54,13 +54,13 @@
     <nav>
       <ul>
         <li>
-          <a href="index.html">
-            Page 1
+          <a href="ratings.html">
+            Ratings
           </a>
         </li>
         <li>
-          <a href="index.html">
-            Page 2
+          <a href="reviews.html">
+            Reviews
           </a>
         </li>
       </ul>
