--- a/template.html
+++ b/template.html
@@ -14,11 +14,8 @@
   <header>
     <div id="logo-wrapper">
       <a href="index.html">
-        <img src="http://placehold.it/200x200" id="logo" alt="Home">
+        <img src="images/logo3.png" id="logo" alt="Home">
       </a>
-    </div>
-    <div id="company-name">
-      Cross Auto
     </div>
     <nav>
       <ul>
