working on product list

--- a/index.html
+++ b/index.html
@@ -27,34 +27,34 @@
       <div class="carSelection">
         <div class="makesRowA">
           <a
-            href="https://gmcrm.github.io/wdd_230/Final_Project_guitar_website/home.html"
+            href="productListing.html"
             ><img class="sub_truck" src="images/sub_truck.jpg" alt=""
           /></a>
 
           <a
-            href="https://gmcrm.github.io/wdd_230/Final_Project_guitar_website/home.html"
+            href="productListing.html"
             ><img class="sub_coupes" src="images/sub_coupes.jpg" alt=""
           /></a>
         </div>
         <div class="makesRowB">
           <a
-            href="https://gmcrm.github.io/wdd_230/Final_Project_guitar_website/home.html"
+            href="productListing.html"
             ><img class="sub_hatchbacks" src="images/sub_hatchbacks.jpg" alt=""
           /></a>
 
           <a
-            href="https://gmcrm.github.io/wdd_230/Final_Project_guitar_website/home.html"
+            href="productListing.html"
             ><img class="sub_electric" src="images/sub_electric.jpg" alt=""
           /></a>
         </div>
         <div class="makesRowC">
           <a
-            href="https://gmcrm.github.io/wdd_230/Final_Project_guitar_website/home.html"
+            href="productListing.html"
             ><img class="sub_suvs" src="images/sub_suvs.jpg" alt="" />
           </a>
 
           <a
-            href="https://gmcrm.github.io/wdd_230/Final_Project_guitar_website/home.html"
+            href="productListing.html"
           >
             <img class="sub_sedans" src="images/sub_sedans.jpg" alt="" />
           </a>
@@ -71,85 +71,85 @@
         <div class="carousel">
           <div class="slide" id="slide1">
             <a
-              href="https://gmcrm.github.io/wdd_230/Final_Project_guitar_website/home.html"
+              href="productListing.html"
               ><img src="./images/car_1.jpg" alt=""
             /></a>
           </div>
           <div class="slide" id="slide1">
             <a
-              href="https://gmcrm.github.io/wdd_230/Final_Project_guitar_website/home.html"
+              href="productListing.html"
               ><img src="./images/car_2.jpg" alt=""
             /></a>
           </div>
           <div class="slide" id="slide1">
             <a
-              href="https://gmcrm.github.io/wdd_230/Final_Project_guitar_website/home.html"
+              href="productListing.html"
               ><img src="./images/car_3.jpg" alt=""
             /></a>
           </div>
           <div class="slide" id="slide1">
             <a
-              href="https://gmcrm.github.io/wdd_230/Final_Project_guitar_website/home.html"
+              href="productListing.html"
               ><img src="./images/car_4.jpg" alt=""
             /></a>
           </div>
           <div class="slide" id="slide1">
             <a
-              href="https://gmcrm.github.io/wdd_230/Final_Project_guitar_website/home.html"
+              href="productListing.html"
               ><img src="./images/car_5.jpg" alt=""
             /></a>
           </div>
           <div class="slide" id="slide1">
             <a
-              href="https://gmcrm.github.io/wdd_230/Final_Project_guitar_website/home.html"
+              href="productListing.html"
               ><img src="./images/car_6.jpg" alt=""
             /></a>
           </div>
           <div class="slide" id="slide1">
             <a
-              href="https://gmcrm.github.io/wdd_230/Final_Project_guitar_website/home.html"
+              href="productListing.html"
               ><img src="./images/car_7.jpg" alt=""
             /></a>
           </div>
           <div class="slide" id="slide1">
             <a
-              href="https://gmcrm.github.io/wdd_230/Final_Project_guitar_website/home.html"
+              href="productListing.html"
               ><img src="./images/car_1.jpg" alt=""
             /></a>
           </div>
           <div class="slide" id="slide1">
             <a
-              href="https://gmcrm.github.io/wdd_230/Final_Project_guitar_website/home.html"
+              href="productListing.html"
               ><img src="./images/car_2.jpg" alt=""
             /></a>
           </div>
           <div class="slide" id="slide1">
             <a
-              href="https://gmcrm.github.io/wdd_230/Final_Project_guitar_website/home.html"
+              href="productListing.html"
               ><img src="./images/car_3.jpg" alt=""
             /></a>
           </div>
           <div class="slide" id="slide1">
             <a
-              href="https://gmcrm.github.io/wdd_230/Final_Project_guitar_website/home.html"
+              href="productListing.html"
               ><img src="./images/car_4.jpg" alt=""
             /></a>
           </div>
           <div class="slide" id="slide1">
             <a
-              href="https://gmcrm.github.io/wdd_230/Final_Project_guitar_website/home.html"
+              href="productListing.html"
               ><img src="./images/car_5.jpg" alt=""
             /></a>
           </div>
           <div class="slide" id="slide1">
             <a
-              href="https://gmcrm.github.io/wdd_230/Final_Project_guitar_website/home.html"
+              href="productListing.html"
               ><img src="./images/car_6.jpg" alt=""
             /></a>
           </div>
           <div class="slide" id="slide1">
             <a
-              href="https://gmcrm.github.io/wdd_230/Final_Project_guitar_website/home.html"
+              href="productListing.html"
               ><img src="./images/car_7.jpg" alt=""
             /></a>
           </div>
