working on product listing page

--- a/productListing.html
+++ b/productListing.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
     />
 
-    <title>Home Page</title>
+    <title>Product Listings</title>
   </head>
   <body>
     <header id="main-header">
@@ -39,7 +39,9 @@
         </ul>
       </nav>
     </header>
-    <div class="productCard"></div>
+    <h1 class="listingsHeader">Used Trucks</h1>
+    <div class="productCard">
+    </div>
     <footer id="main-footer">
       <div id="legal">&copy; 2022 Cross Auto. All Rights Reserved.</div>
       <nav>
