working on product listing

--- a/product.html
+++ b/product.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
     />
 
-    <title>Product</title>
+    <title>Product Listings</title>
   </head>
   <body>
     <header id="main-header">
@@ -39,8 +39,10 @@
         </ul>
       </nav>
     </header>
-    <h1 class="listingsHeader">Used Trucks</h1>
-    <div class="productCard"></div>
+    <div class="productInfo">
+    <h1>Ford F-150</h1>
+    <img src="images/fordf150.jpg">
+    </div>
     <footer id="main-footer">
       <div id="legal">&copy; 2022 Cross Auto. All Rights Reserved.</div>
       <nav>
