Minor improvements to the Reviews CSS

--- a/reviews.html
+++ b/reviews.html
@@ -51,28 +51,28 @@
     <section>
       <h1>Reviews</h1>
       <div class="reviews">
-        <div id="reviews__card_i">
+        <div class="reviews__card" id="reviews__card_i">
           <p class="reviews__content">
             Couldn't be happier with the whole process. The folks at Cross Auto are extremely nice and knowledgeable. They made everything easy. Thank you.
           </p>
           <strong class="reviews__content-name">John</strong>
           <i class="reviews__content-city">Rigby</i>
         </div>
-        <div id="reviews__card_ii">
+        <div class="reviews__card" id="reviews__card_ii">
           <p class="reviews__content">
             Working with the team at Cross Auto was a wonderful experience. Jamie made finding, buying, and financing my car super easy! Parker and the delivery team made sure my car got here before Christmas! I highly recommend getting a car at Cross Auto.
           </p>
           <strong class="reviews__content-name">Leslie</strong>
           <i class="reviews__content-city">Twin Falls</i>
         </div>
-        <div id="reviews__card_iii">
+        <div class="reviews__card" id="reviews__card_iii">
           <p class="reviews__content">
             Cross Auto was excellent to work with when buying my car. Very seamless and quick process. No hassles and very up-front. A pleasure to do business with.
           </p>
           <strong class="reviews__content-name">Dennis</strong>
           <i class="reviews__content-city">Boise</i>
         </div>
-        <div id="reviews__card_iv">
+        <div class="reviews__card" id="reviews__card_iv">
           <p class="reviews__content">
             Alisha helped me get the SUV I was looking for. Found, test-drove, and purchased a vehicle in one week once I came to Cross Auto.
           </p>
