added dynamic pages

--- a/index.html
+++ b/index.html
@@ -28,35 +28,35 @@
         <div class="makesRowA">
           <a
             href="productListing.html"
-            ><img class="sub_vehicle" id="truck" src="images/sub_truck.jpg" alt=""
+            ><img class="sub_vehicle" id="Trucks" src="images/sub_truck.jpg" alt=""
           /></a>
 
           <a
             href="productListing.html"
-            ><img class="sub_vehicle" id="coupes" src="images/sub_coupes.jpg" alt=""
+            ><img class="sub_vehicle" id="Coupes" src="images/sub_coupes.jpg" alt=""
           /></a>
         </div>
         <div class="makesRowB">
           <a
             href="productListing.html"
-            ><img class="sub_vehicle" id="hatchbacks" src="images/sub_hatchbacks.jpg" alt=""
+            ><img class="sub_vehicle" id="Hatchbacks" src="images/sub_hatchbacks.jpg" alt=""
           /></a>
 
           <a
             href="productListing.html"
-            ><img class="sub_vehicle" id="electric" src="images/sub_electric.jpg" alt=""
+            ><img class="sub_vehicle" id="Electric" src="images/sub_electric.jpg" alt=""
           /></a>
         </div>
         <div class="makesRowC">
           <a
             href="productListing.html"
-            ><img class="sub_vehicle" id="suvs" src="images/sub_suvs.jpg" alt="" />
+            ><img class="sub_vehicle" id="Suvs" src="images/sub_suvs.jpg" alt="" />
           </a>
 
           <a
             href="productListing.html"
           >
-            <img class="sub_vehicle" id="sedans" src="images/sub_sedans.jpg" alt="" />
+            <img class="sub_vehicle" id="Sedans" src="images/sub_sedans.jpg" alt="" />
           </a>
         </div>
       </div>
