--- a/productListing.html
+++ b/productListing.html
@@ -39,7 +39,7 @@
         </ul>
       </nav>
     </header>
-    <h1 class="listingsHeader">Used Trucks</h1>
+    <h1 class="listingsHeader"></h1>
     <div class="productCard"></div>
     <footer id="main-footer">
       <div id="legal">&copy; 2022 Cross Auto. All Rights Reserved.</div>
