--- a/product.html
+++ b/product.html
@@ -40,8 +40,11 @@
       </nav>
     </header>
     <div class="productInfo">
-    <h1>Ford F-150</h1>
-    <img src="images/fordf150.jpg">
+    <h1 class="make">Ford F-150</h1>
+    <img class="carImg" src="images/fordf150.jpg">
+    <h2 class="price"></h2>
+    <h3 class="miles"></h3>
+    <p class="desc"></p>
     </div>
     <footer id="main-footer">
       <div id="legal">&copy; 2022 Cross Auto. All Rights Reserved.</div>
@@ -58,6 +61,6 @@
       <div></div>
     </footer>
 
-    <script src="script/productListing.js" type="module"></script>
+    <script src="script/product.js" type="module"></script>
   </body>
 </html>
