Added ratings to reviews, modified links

--- a/productListing.html
+++ b/productListing.html
@@ -12,7 +12,6 @@
       href="https://fonts.googleapis.com/css2?family=Oswald&display=swap"
       rel="stylesheet"
     />
-
     <title>Product</title>
   </head>
   <body>
@@ -46,10 +45,14 @@
       <nav>
         <ul>
           <li>
-            <a href="index.html"> Page 1 </a>
+            <a href="ratings.html">
+              Ratings
+            </a>
           </li>
           <li>
-            <a href="index.html"> Page 2 </a>
+            <a href="reviews.html">
+              Reviews
+            </a>
           </li>
         </ul>
       </nav>
