--- a/reviews.html
+++ b/reviews.html
@@ -55,6 +55,7 @@
           <img src="images/reviews/reviews1.jpg" id="avatar" alt="John">
           <strong>John</strong>
           <i>Rigby</i>
+          <img src="images/reviews/five-stars.png" id="stars" alt="five-stars">
           <p>
             Couldn't be happier with the whole process. The folks at Cross Auto are extremely nice and knowledgeable. They made everything easy. Thank you.
           </p>
@@ -63,6 +64,7 @@
           <img src="images/reviews/reviews2.jpg" id="avatar" alt="Leslie">
           <strong>Leslie</strong>
           <i>Twin Falls</i>
+          <img src="images/reviews/five-stars.png" id="stars" alt="five-stars">
           <p>
             Working with the team at Cross Auto was a wonderful experience. Jamie made finding, buying, and financing my car super easy! Parker and the delivery team made sure my car got here before Christmas! I highly recommend getting a car at Cross Auto.
           </p>
@@ -71,6 +73,7 @@
           <img src="images/reviews/reviews3.jpg" id="avatar" alt="Dennis">
           <strong>Dennis</strong>
           <i>Boise</i>
+          <img src="images/reviews/five-stars.png" id="stars" alt="five-stars">
           <p>
             Cross Auto was excellent to work with when buying my car. Very seamless and quick process. No hassles and very up-front. A pleasure to do business with.
           </p>
@@ -79,6 +82,7 @@
           <img src="images/reviews/reviews4.png" id="avatar" alt="Raj">
           <strong>Raj</strong>
           <i>Pocatello</i>
+          <img src="images/reviews/five-stars.png" id="stars" alt="five-stars">
           <p>
             Alisha helped me get the SUV I was looking for. Found, test-drove, and purchased a vehicle in one week once I came to Cross Auto.
           </p>
