Improvements to Reviews page

--- a/reviews.html
+++ b/reviews.html
@@ -52,37 +52,45 @@
       <h1>Reviews</h1>
       <div id="reviews">
         <div>
-          <img src="images/reviews/reviews1.jpg" id="avatar" alt="John">
-          <strong>John</strong>
-          <i>Rigby</i>
-          <img src="images/reviews/five-stars.png" id="stars" alt="five-stars">
+          <img src="images/reviews/reviews1.jpg" class="avatar" alt="John">
+          <span class="nameloc">
+            <strong>John</strong>
+            <i>Rigby</i>
+            <img src="images/reviews/five-stars.png">
+          </span>
           <p>
             Couldn't be happier with the whole process. The folks at Cross Auto are extremely nice and knowledgeable. They made everything easy. Thank you.
           </p>
         </div>
         <div>
-          <img src="images/reviews/reviews2.jpg" id="avatar" alt="Leslie">
-          <strong>Leslie</strong>
-          <i>Twin Falls</i>
-          <img src="images/reviews/five-stars.png" id="stars" alt="five-stars">
+          <img src="images/reviews/reviews2.jpg" class="avatar" alt="Leslie">
+          <span class="nameloc">
+            <strong>Leslie</strong>
+            <i>Twin Falls</i>
+            <img src="images/reviews/five-stars.png">
+          </span>
           <p>
             Working with the team at Cross Auto was a wonderful experience. Jamie made finding, buying, and financing my car super easy! Parker and the delivery team made sure my car got here before Christmas! I highly recommend getting a car at Cross Auto.
           </p>
         </div>
         <div>
-          <img src="images/reviews/reviews3.jpg" id="avatar" alt="Dennis">
-          <strong>Dennis</strong>
-          <i>Boise</i>
-          <img src="images/reviews/five-stars.png" id="stars" alt="five-stars">
+          <img src="images/reviews/reviews3.jpg" class="avatar" alt="Dennis">
+          <span class="nameloc">
+            <strong>Dennis</strong>
+            <i>Boise</i>
+            <img src="images/reviews/five-stars.png">
+          </span>
           <p>
             Cross Auto was excellent to work with when buying my car. Very seamless and quick process. No hassles and very up-front. A pleasure to do business with.
           </p>
         </div>
         <div>
-          <img src="images/reviews/reviews4.png" id="avatar" alt="Raj">
-          <strong>Raj</strong>
-          <i>Pocatello</i>
-          <img src="images/reviews/five-stars.png" id="stars" alt="five-stars">
+          <img src="images/reviews/reviews4.png" class="avatar" alt="Raj">
+          <span class="nameloc">
+            <strong id="name">Raj</strong>
+            <i id="location">Pocatello</i>
+            <img src="images/reviews/five-stars.png">
+          </span>
           <p>
             Alisha helped me get the SUV I was looking for. Found, test-drove, and purchased a vehicle in one week once I came to Cross Auto.
           </p>
