--- a/template.html
+++ b/template.html
@@ -31,7 +31,7 @@
           </a>
         </li>
         <li>
-          <a href="estimator.html">
+          <a href="loanEstimator.html">
             Loan Estimator
           </a>
         </li>
