--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <link rel="stylesheet" href="styles/normalize.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <!-- <link rel="stylesheet" href="styles/reviews.css"> -->
     
+
+
     <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap"rel="stylesheet"/>
 
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
@@ -123,91 +126,147 @@
           <div class="slide" id="slide1">
             <a
               href="productListing.html"
-              ><img src="./images/car_1.jpg" alt=""
+              ><img src="images/Coupes/IMG_1216.jpeg" alt=""
             /></a>
           </div>
           <div class="slide" id="slide1">
             <a
               href="productListing.html"
-              ><img src="./images/car_2.jpg" alt=""
+              ><img src="images/Electric/IMG_1017.JPG" alt=""
             /></a>
           </div>
           <div class="slide" id="slide1">
             <a
               href="productListing.html"
-              ><img src="./images/car_3.jpg" alt=""
+              ><img src="images/Hatchbacks/IMG_1175.jpeg" alt=""
             /></a>
           </div>
           <div class="slide" id="slide1">
             <a
               href="productListing.html"
-              ><img src="./images/car_4.jpg" alt=""
+              ><img src="images/Sedans/IMG_1137.jpeg" alt=""
             /></a>
           </div>
           <div class="slide" id="slide1">
             <a
               href="productListing.html"
-              ><img src="./images/car_5.jpg" alt=""
+              ><img src="images/SUVs/IMG_1056.JPG" alt=""
             /></a>
           </div>
           <div class="slide" id="slide1">
             <a
               href="productListing.html"
-              ><img src="./images/car_6.jpg" alt=""
+              ><img src="images/Coupes/IMG_1218.jpeg" alt=""
             /></a>
           </div>
           <div class="slide" id="slide1">
             <a
               href="productListing.html"
-              ><img src="./images/car_7.jpg" alt=""
+              ><img src="images/Electric/IMG_1019.JPG" alt=""
             /></a>
           </div>
           <div class="slide" id="slide1">
             <a
               href="productListing.html"
-              ><img src="./images/car_1.jpg" alt=""
+              ><img src="images/Hatchbacks/IMG_1177.jpeg" alt=""
             /></a>
           </div>
           <div class="slide" id="slide1">
             <a
               href="productListing.html"
-              ><img src="./images/car_2.jpg" alt=""
+              ><img src="images/Sedans/IMG_1138.jpeg" alt=""
             /></a>
           </div>
           <div class="slide" id="slide1">
             <a
               href="productListing.html"
-              ><img src="./images/car_3.jpg" alt=""
+              ><img src="images/SUVs/IMG_1057.JPG" alt=""
             /></a>
           </div>
           <div class="slide" id="slide1">
             <a
               href="productListing.html"
-              ><img src="./images/car_4.jpg" alt=""
+              ><img src="images/Coupes/IMG_1219.jpeg" alt=""
             /></a>
           </div>
           <div class="slide" id="slide1">
             <a
               href="productListing.html"
-              ><img src="./images/car_5.jpg" alt=""
+              ><img src="images/Electric/IMG_1023.JPG" alt=""
             /></a>
           </div>
           <div class="slide" id="slide1">
             <a
               href="productListing.html"
-              ><img src="./images/car_6.jpg" alt=""
+              ><img src="images/Hatchbacks/IMG_1178.jpeg" alt=""
             /></a>
           </div>
           <div class="slide" id="slide1">
             <a
               href="productListing.html"
-              ><img src="./images/car_7.jpg" alt=""
+              ><img src="images/Sedans/IMG_1139.jpeg" alt=""
             /></a>
           </div>
         </div>
         <button class="right-button" onclick="goRight()"> > </button>
       </div>
     </div>
+
+<div class="banner gray">
+    <img class="hero_image_specs2 "src="images/people_say_about_us.jpg"alt="hero_image"/>
+  <h1 class="slogan2">People say about us</h1>
+  <section>
+    <!-- <h1>Reviews</h1> -->
+    <div class="reviews">
+      <div>
+        <img src="images/reviews/reviews1.jpg" class="avatar" alt="John">
+        <span class="nameloc">
+          <strong>John - </strong>
+          <i>Rigby</i>
+          <img src="images/reviews/five-stars.png">
+        </span>
+        <p>
+          Couldn't be happier with the whole process. The folks at Cross Auto are extremely nice and knowledgeable. They made everything easy. Thank you.
+        </p>
+      </div>
+      <div>
+        <img src="images/reviews/reviews2.jpg" class="avatar" alt="Leslie">
+        <span class="nameloc">
+          <strong>Leslie - </strong>
+          <i>Twin Falls</i>
+          <img src="images/reviews/five-stars.png">
+        </span>
+        <p>
+          Working with the team at Cross Auto was a wonderful experience. Jamie made finding, buying, and financing my car super easy! Parker and the delivery team made sure my car got here before Christmas! I highly recommend getting a car at Cross Auto.
+        </p>
+      </div>
+      <div>
+        <img src="images/reviews/reviews3.jpg" class="avatar" alt="Dennis">
+        <span class="nameloc">
+          <strong>Dennis - </strong>
+          <i>Boise</i>
+          <img src="images/reviews/five-stars.png">
+        </span>
+        <p>
+          Cross Auto was excellent to work with when buying my car. Very seamless and quick process. No hassles and very up-front. A pleasure to do business with.
+        </p>
+      </div>
+      <div>
+        <img src="images/reviews/reviews4.png" class="avatar" alt="Raj">
+        <span class="nameloc">
+          <strong id="name">Raj - </strong>
+          <i id="location">Pocatello</i>
+          <img src="images/reviews/five-stars.png">
+        </span>
+        <p>
+          Alisha helped me get the SUV I was looking for. Found, test-drove, and purchased a vehicle in one week once I came to Cross Auto.
+        </p>
+      </div>
+    </div>
+  </section>
+</div>
+
+
    
     <footer id="main-footer"></footer>
 
