added a bit more style to loan estimator

--- a/loanEstimator.html
+++ b/loanEstimator.html
@@ -74,6 +74,7 @@
         <button class="submit">Calculate</button>
       </div>
       <div class="results">
+        <h2>Results</h2>
         <label>Vehicle Price</label>
         <h3>$<span id="priceResult"></span></h3>
         <label>Down Payment</label>
