fixed product page

--- a/product.html
+++ b/product.html
@@ -43,10 +43,25 @@
     <h1 class="make">Ford F-150</h1>
     <hr>
     <img class="carImg" src="images/fordf150.jpg">
-    <h2 class="price"></h2>
     <h3 class="miles"></h3>
+    <h2 class="price"></h2>
+    <button id="finance">Calculate Monthly Payment</button>
+   
     <hr>
-    <p class="desc"></p>
+    <div class="contactSeller">
+      <h2>Interested? Send a message to the seller:</h2>
+      <form>
+        <label id="fName" for="fName">Name</label>
+        <input id="fName" type="text">
+        <label id="email" for="email">Email</label>
+        <input id="email" type="text">
+        <label id="number" for="number">Phone Number</label>
+        <input id="number" type="number">
+        <label>Message</label>
+        <textarea></textarea>
+        <input id="submitToSeller" type="submit" value="Send Message">
+      </form>
+    </div>
     </div>
     <footer id="main-footer">
       <div id="legal">&copy; 2022 Cross Auto. All Rights Reserved.</div>
