--- a/product.html
+++ b/product.html
@@ -51,14 +51,14 @@
     <div class="contactSeller">
       <h2>Interested? Send a message to the seller:</h2>
       <form>
-        <label id="fName" for="fName">Name</label>
-        <input id="fName" type="text">
-        <label id="email" for="email">Email</label>
-        <input id="email" type="text">
+        <label id="fName" for="fName">Name*</label>
+        <input id="fName" type="text" required>
+        <label id="email" for="email">Email*</label>
+        <input id="email" type="text" required>
         <label id="number" for="number">Phone Number</label>
         <input id="number" type="number">
         <label>Message</label>
-        <textarea></textarea>
+        <textarea></textarea required>
         <input id="submitToSeller" type="submit" value="Send Message">
       </form>
     </div>
