--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="makesRowA">
           <a
             href="productListing.html"
-            ><img class="sub_vehicle" id="Trucks" src="images/sub_truck.jpg" alt=""
+            ><img class="sub_vehicle" id="Trucks" src="images/sub_trucks.jpg" alt=""
           /></a>
 
 
