--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             ><img
               class="sub_vehicle"
               id="Trucks"
-              src="images/sub_truck.jpg"
+              src="images/sub_trucks.jpg"
               alt=""
           /></a>
 
@@ -165,7 +165,7 @@
           </div>
           <div class="slide" id="slide1">
             <a href="productListing.html"
-              ><img src="images/Hatchbacks/IMG_1175.jpeg" alt=""
+              ><img src="images/Hatchbacks/hatchbacks-3.jpeg" alt=""
             /></a>
           </div>
           <div class="slide" id="slide1">
@@ -190,7 +190,7 @@
           </div>
           <div class="slide" id="slide1">
             <a href="productListing.html"
-              ><img src="images/Hatchbacks/IMG_1177.jpeg" alt=""
+              ><img src="images/Hatchbacks/hatchbacks-7.jpeg" alt=""
             /></a>
           </div>
           <div class="slide" id="slide1">
@@ -215,7 +215,7 @@
           </div>
           <div class="slide" id="slide1">
             <a href="productListing.html"
-              ><img src="images/Hatchbacks/IMG_1178.jpeg" alt=""
+              ><img src="images/Hatchbacks/hatchbacks-6.jpeg" alt=""
             /></a>
           </div>
           <div class="slide" id="slide1">
