--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         alt="hero_image"
       />
       <h1 class="slogan">Prices You Can Afford</h1>
-      <input type="search" id="search" />
+      <!-- <input type="search" id="search" /> -->
       <div class="carSelection">
         <div class="makesRowA">
           <a href="productListing.html"
