Fixed Contact Us link, changed Copyright to 2023

--- a/reviews.html
+++ b/reviews.html
@@ -40,7 +40,7 @@
           </a>
         </li>
         <li>
-          <a href="contact-us.html">
+          <a href="about.html">
             Contact Us
           </a>
         </li>
@@ -100,7 +100,7 @@
   </main>
   <footer>
     <div id="legal">
-      &copy; 2022 Cross Auto. All Rights Reserved.
+      &copy; 2023 Cross Auto. All Rights Reserved.
     </div>
     <nav>
       <ul>
