--- a/loanEstimator.html
+++ b/loanEstimator.html
@@ -33,7 +33,7 @@
               </a>
             </li>
             <li>
-              <a href="contact-us.html">
+              <a href="about.html">
                 Contact Us
               </a>
             </li>
@@ -95,7 +95,7 @@
       </main>
       <footer>
         <div id="legal">
-          &copy; 2022 Cross Auto. All Rights Reserved.
+          &copy; 2023 Cross Auto. All Rights Reserved.
         </div>
         <nav>
           <ul>
