--- a/product.html
+++ b/product.html
@@ -34,7 +34,7 @@
             <a href="estimator.html"> Loan Estimator </a>
           </li>
           <li>
-            <a href="contact-us.html"> Contact Us </a>
+            <a href="about.html"> Contact Us </a>
           </li>
         </ul>
       </nav>
@@ -64,7 +64,7 @@
     </div>
     </div>
     <footer id="main-footer">
-      <div id="legal">&copy; 2022 Cross Auto. All Rights Reserved.</div>
+      <div id="legal">&copy; 2023 Cross Auto. All Rights Reserved.</div>
       <nav>
         <ul>
           <li>
