--- a/productListing.html
+++ b/productListing.html
@@ -33,7 +33,7 @@
             <a href="estimator.html"> Loan Estimator </a>
           </li>
           <li>
-            <a href="contact-us.html"> Contact Us </a>
+            <a href="about.html"> Contact Us </a>
           </li>
         </ul>
       </nav>
@@ -41,7 +41,7 @@
     <h1 class="listingsHeader"></h1>
     <div class="productCard"></div>
     <footer id="main-footer">
-      <div id="legal">&copy; 2022 Cross Auto. All Rights Reserved.</div>
+      <div id="legal">&copy; 2023 Cross Auto. All Rights Reserved.</div>
       <nav>
         <ul>
           <li>
