Added footer icons, fixed typo, added new grid

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
           <a href="productListing.html"
             ><img
               class="sub_vehicle"
-              id="Suvs"
+              id="SUVs"
               src="images/sub_suvs.jpg"
               alt=""
             />
