--- a/template.html
+++ b/template.html
@@ -8,6 +8,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="styles/fa.css">
   <link rel="stylesheet" href="styles/normalize.css">
   <link rel="stylesheet" href="styles/main.css">
 </head>
@@ -52,14 +54,10 @@
     <nav>
       <ul>
         <li>
-          <a href="ratings.html">
-            Ratings
-          </a>
+          <a href="#" class="fa fa-facebook"></a>
         </li>
         <li>
-          <a href="reviews.html">
-            Reviews
-          </a>
+          <a href="#" class="fa fa-twitter"></a>
         </li>
       </ul>
     </nav>
