--- a/product.html
+++ b/product.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="styles/fa.css">
     <link rel="stylesheet" href="styles/home.css" />
     <link rel="stylesheet" href="styles/normalize.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -68,14 +70,10 @@
       <nav>
         <ul>
           <li>
-            <a href="ratings.html">
-              Ratings
-            </a>
+            <a href="#" class="fa fa-facebook"></a>
           </li>
           <li>
-            <a href="reviews.html">
-              Reviews
-            </a>
+            <a href="#" class="fa fa-twitter"></a>
           </li>
         </ul>
       </nav>
