Working on mobile views

--- a/loanEstimator.html
+++ b/loanEstimator.html
@@ -23,7 +23,7 @@
               </a>
             </li>
             <li>
-              <a href="inventory.html">
+              <a href="productListing.html">
                 Inventory
               </a>
             </li>
