Banner image opacity, added anchor link

--- a/about.html
+++ b/about.html
@@ -12,7 +12,6 @@
   <link rel="stylesheet" href="styles/fa.css">
   <link rel="stylesheet" href="styles/normalize.css">
   <link rel="stylesheet" href="styles/main.css">
-  <link rel="stylesheet" href="styles/about.css">
 </head>
 <body>
   <header>
@@ -39,7 +38,7 @@
           </a>
         </li>
         <li>
-          <a href="about.html">
+          <a href="about.html#contact-us">
             Contact Us
           </a>
         </li>
@@ -56,11 +55,11 @@
       <h2>Dealership History</h2>
       <p>Grant Cross was born and raised in Southeast Idaho, where he worked his way from selling western wear to building a chain of RV dealerships to becoming President of one of the United States' largest RV Corporations. After deciding to leave the RV world to establish a family business in the car industry, he opened his first location in Rigby in 2008. Owing to the success and reputation of the dealership in Rigby, the family business expanded into a second dealership, opened in Blackfoot in 2016. Today, with sales and certified service departments working hard to provide exceptional customer service, they are the fastest growing dealership group in Southeast Idaho.</p>
     </section>
-    <section class="contact-us">
+    <section class="contact-us" id="contact-us">
       <h1>Contact Us</h1>
       <h2>Grant Cross, President</h2>
-      <p><strong>Phone: </strong>(XXX) XXX-XXXX</p>
-      <p><strong>Email: </strong>XXXXXX@XXXXX</p>
+      <p><strong>Phone: </strong>(480) 572-7172</p>
+      <p><strong>Email: </strong>crossg@crossauto.com</p>
     </section>
   </main>
   <footer>
