--- a/reviews.html
+++ b/reviews.html
@@ -42,7 +42,7 @@
           </a>
         </li>
         <li>
-          <a href="about.html">
+          <a href="about.html#contact-us">
             Contact Us
           </a>
         </li>
