--- a/loanEstimator.html
+++ b/loanEstimator.html
@@ -35,7 +35,7 @@
               </a>
             </li>
             <li>
-              <a href="about.html">
+              <a href="about.html#contact-us">
                 Contact Us
               </a>
             </li>
