--- a/product.html
+++ b/product.html
@@ -36,7 +36,7 @@
             <a href="loanEstimator.html"> Loan Estimator </a>
           </li>
           <li>
-            <a href="about.html"> Contact Us </a>
+            <a href="about.html#contact-us"> Contact Us </a>
           </li>
         </ul>
       </nav>
