--- a/template.html
+++ b/template.html
@@ -38,7 +38,7 @@
           </a>
         </li>
         <li>
-          <a href="about.html">
+          <a href="about.html#contact-us">
             Contact Us
           </a>
         </li>
