added mobile view to home page

--- a/about.html
+++ b/about.html
@@ -11,7 +11,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="styles/fa.css">
   <link rel="stylesheet" href="styles/normalize.css">
-  <link rel="stylesheet" href="styles/main.css">
+  <!-- <link rel="stylesheet" href="styles/main.css"> -->
+  <link rel="stylesheet" href="styles/home.css">
 </head>
 <body>
   <header>
@@ -21,7 +22,9 @@
       </a>
     </div>
     <nav>
-      <ul>
+      <a class="ham" href="#">&#9776;</a>
+      <ul class="links">
+        <li class="responsive"></li>
         <li>
           <a href="about.html">
             About
@@ -43,6 +46,7 @@
           </a>
         </li>
       </ul>
+      <a class="ham" href="#">&#9776;</a>
   </nav>
   </header>
   <main>
