--- a/index.html
+++ b/index.html
@@ -27,7 +27,30 @@
     <title>Home Page</title>
   </head>
   <body>
-    <header id="main-header"></header>
+    <header id="main-header"><div id="logo-wrapper">
+      <a href="index.html">
+        <img src="images/logo3.png" id="logo" alt="Home" />
+      </a>
+    </div>
+    <nav>
+      
+      <ul class="links">
+        <li class="responsive"></li>
+        <li>
+          <a href="about.html"> About </a>
+        </li>
+        <li>
+          <a href="../productListing.html"> Inventory </a>
+        </li>
+        <li>
+          <a href="../loanEstimator.html"> Loan Estimator </a>
+        </li>
+        <li>
+          <a href="about.html#contact-us"> Contact Us </a>
+        </li>
+      </ul>
+      <a class="ham" href="#">&#9776;</a>
+    </nav></header>
 
     <!-- chat box -->
     <div class="chatbox-wrapper">
@@ -302,7 +325,23 @@
       </section>
     </div>
 
-    <footer id="main-footer"></footer>
+    <footer id="main-footer">
+      <div id="legal">
+        &copy; 2023 Cross Auto. All Rights Reserved.
+      </div>
+      <nav>
+        <ul>
+          <li>
+            <a href="#" class="fa fa-facebook"></a>
+          </li>
+          <li>
+            <a href="#" class="fa fa-twitter"></a>
+          </li>
+        </ul>
+      </nav>
+      <div>
+      </div>
+    </footer>
 
     <script src="script/home.js" type="module"></script>
   </body>
