--- a/product.html
+++ b/product.html
@@ -25,7 +25,9 @@
         </a>
       </div>
       <nav>
-        <ul>
+        <a class="ham" href="#">&#9776;</a>
+        <ul class="links">
+          <li class="responsive"></li>
           <li>
             <a href="about.html"> About </a>
           </li>
@@ -39,6 +41,7 @@
             <a href="about.html#contact-us"> Contact Us </a>
           </li>
         </ul>
+        <a class="ham" href="#">&#9776;</a>
       </nav>
     </header>
     <div class="productInfo">
