--- a/productListing.html
+++ b/productListing.html
@@ -24,7 +24,9 @@
         </a>
       </div>
       <nav>
-        <ul>
+        
+        <ul class="links">
+          <li class="responsive"></li>
           <li>
             <a href="about.html"> About </a>
           </li>
@@ -38,6 +40,7 @@
             <a href="about.html#contact-us"> Contact Us </a>
           </li>
         </ul>
+        <a class="ham" href="#">&#9776;</a>
       </nav>
     </header>
     <h1 class="listingsHeader"></h1>
