finished mobile view for loan calculator

--- a/product.html
+++ b/product.html
@@ -46,7 +46,7 @@
     <div class="productInfo">
     <h1 class="make">Ford F-150</h1>
     <hr>
-    <img class="carImg" src="images/fordf150.jpg">
+    <img class="carImg" src="https://dummyimage.com/500x333/ccc/fff">
     <h3 class="miles"></h3>
     <h2 class="price"></h2>
     <button id="finance">Calculate Monthly Payment</button>
