--- a/about.html
+++ b/about.html
@@ -1,108 +1,154 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="styles/fa.css">
-  <link rel="stylesheet" href="styles/normalize.css">
-  <!-- <link rel="stylesheet" href="styles/main.css"> -->
-  <link rel="stylesheet" href="styles/home.css">
-  <link rel="stylesheet" href="styles/about.css">
-</head>
-<body>
-  <header>
-    <div id="logo-wrapper">
-      <a href="index.html">
-        <img src="images/logo3.png" id="logo" alt="Home">
-      </a>
-    </div>
-    <nav>
-      <a class="ham" href="#">&#9776;</a>
-      <ul class="links">
-        <li class="responsive"></li>
-        <li>
-          <a href="about.html">
-            About
-          </a>
-        </li>
-        <li>
-          <a href="productListing.html">
-            Inventory
-          </a>
-        </li>
-        <li>
-          <a href="loanEstimator.html">
-            Loan Estimator
-          </a>
-        </li>
-        <li>
-          <a href="about.html#contact-us">
-            Contact Us
-          </a>
-        </li>
-      </ul>
-      <a class="ham" href="#">&#9776;</a>
-  </nav>
-  </header>
-  <main>
-    <section class="about">
-      <h1>About</h1>
-      <h2>Where Small Town Values Endure</h2>
-      <p>At Cross Auto, our commitment to maintaining small town values means that our customers always come first. We'll do more than simply sell you a car. We help you through every step of the process from helping you find the perfect new or used vehicle, to making sure your buying experience was nothing but exceptional after you leave our dealership. From scheduling a test drive or service appointment, to to helping you with finance options, Cross Auto is excited to help you find the car of your dreams.</p>
-      <h2>About Our Dealership</h2>
-      <p>The team at Cross Auto still believes in small town values—things like hard work, fairness, and giving back to our community. That means we focus on our customers and their car-buying experience, not like other dealerships only concerned with selling cars at the highest price. Our sales team listens to customers and works with them to help them find the perfect vehicle for their needs at a great price. We also work with local banks to offer our customers competitive financing so cars, trucks and SUVs cost less. Cross Auto even calls every customer to make sure they had a great experience! And when you need service, parts or accessories, our team of certified technicians and advisors is there to help you understand how to keep your vehicle running at its best. So come see us today in Rigby, ID and see why our small town values have made us the fastest growing dealership group in Southeast Idaho!</p>
-      <h2>Dealership History</h2>
-      <p>Grant Cross was born and raised in Southeast Idaho, where he worked his way from selling western wear to building a chain of RV dealerships to becoming President of one of the United States' largest RV Corporations. After deciding to leave the RV world to establish a family business in the car industry, he opened his first location in Rigby in 2008. Owing to the success and reputation of the dealership in Rigby, the family business expanded into a second dealership, opened in Blackfoot in 2016. Today, with sales and certified service departments working hard to provide exceptional customer service, they are the fastest growing dealership group in Southeast Idaho.</p>
-    </section>
-    <hr>
-    <section class="contact-us" id="contact-us">
-      <h1>Contact Us</h1>
-      <h2>Grant Cross, President</h2>
-      <p class="contact-info"><strong>Phone: </strong>(480) 572-7172</p>
-      <p class="contact-info"><strong>Email: </strong>crossg@crossauto.com</p>
-      <p>
-        Email or message us with any questions or inquiries or call (480) 572-7172. We would be happy to answer your questions and set up a meeting with you. Cross Auto can help you find the right car!
-      </p>
-      <form method="GET" action="contact-us.html" id="contact-form">
-        <label id="name">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>About</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oswald&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link rel="stylesheet" href="styles/fa.css" />
+    <link rel="stylesheet" href="styles/normalize.css" />
+    <!-- <link rel="stylesheet" href="styles/main.css"> -->
+    <link rel="stylesheet" href="styles/home.css" />
+    <link rel="stylesheet" href="styles/about.css" />
+  </head>
+  <body>
+    <header>
+      <div id="logo-wrapper">
+        <a href="index.html">
+          <img src="images/logo3.png" id="logo" alt="Home" />
+        </a>
+      </div>
+      <nav>
+        <ul class="links">
+          <li class="responsive"></li>
+          <li>
+            <a href="about.html"> About </a>
+          </li>
+          <li>
+            <a href="productListing.html"> Inventory </a>
+          </li>
+          <li>
+            <a href="loanEstimator.html"> Loan Estimator </a>
+          </li>
+          <li>
+            <a href="about.html#contact-us"> Contact Us </a>
+          </li>
+        </ul>
+        <a class="ham" href="#">&#9776;</a>
+      </nav>
+    </header>
+    <main>
+      <section class="about">
+        <h1>About</h1>
+        <h2>Where Small Town Values Endure</h2>
+        <p>
+          At Cross Auto, our commitment to maintaining small town values means
+          that our customers always come first. We'll do more than simply sell
+          you a car. We help you through every step of the process from helping
+          you find the perfect new or used vehicle, to making sure your buying
+          experience was nothing but exceptional after you leave our dealership.
+          From scheduling a test drive or service appointment, to to helping you
+          with finance options, Cross Auto is excited to help you find the car
+          of your dreams.
+        </p>
+        <h2>About Our Dealership</h2>
+        <p>
+          The team at Cross Auto still believes in small town values—things like
+          hard work, fairness, and giving back to our community. That means we
+          focus on our customers and their car-buying experience, not like other
+          dealerships only concerned with selling cars at the highest price. Our
+          sales team listens to customers and works with them to help them find
+          the perfect vehicle for their needs at a great price. We also work
+          with local banks to offer our customers competitive financing so cars,
+          trucks and SUVs cost less. Cross Auto even calls every customer to
+          make sure they had a great experience! And when you need service,
+          parts or accessories, our team of certified technicians and advisors
+          is there to help you understand how to keep your vehicle running at
+          its best. So come see us today in Rigby, ID and see why our small town
+          values have made us the fastest growing dealership group in Southeast
+          Idaho!
+        </p>
+        <h2>Dealership History</h2>
+        <p>
+          Grant Cross was born and raised in Southeast Idaho, where he worked
+          his way from selling western wear to building a chain of RV
+          dealerships to becoming President of one of the United States' largest
+          RV Corporations. After deciding to leave the RV world to establish a
+          family business in the car industry, he opened his first location in
+          Rigby in 2008. Owing to the success and reputation of the dealership
+          in Rigby, the family business expanded into a second dealership,
+          opened in Blackfoot in 2016. Today, with sales and certified service
+          departments working hard to provide exceptional customer service, they
+          are the fastest growing dealership group in Southeast Idaho.
+        </p>
+      </section>
+      <hr />
+      <section class="contact-us" id="contact-us">
+        <h1>Contact Us</h1>
+        <h2>Grant Cross, President</h2>
+        <p class="contact-info"><strong>Phone: </strong>(480) 572-7172</p>
+        <p class="contact-info"><strong>Email: </strong>crossg@crossauto.com</p>
+        <p>
+          Email or message us with any questions or inquiries or call (480)
+          572-7172. We would be happy to answer your questions and set up a
+          meeting with you. Cross Auto can help you find the right car!
+        </p>
+        <div class="usefulInfo">
+        <form method="GET" action="contact-us.html" id="contact-form">
+          <label id="name">
             Name:<br />
-            <input type="text" name="name" placeholder="Name">
-        </label>
-        <label id="subject">
+            <input type="text" name="name" placeholder="Name" />
+          </label>
+          <label id="subject">
             Subject:<br />
-            <input type="text" name="subject" placeholder="Subject">
-        </label>
-        <label id="message">
+            <input type="text" name="subject" placeholder="Subject" />
+          </label>
+          <label id="message">
             Message:<br />
             <textarea name="message" placeholder="Insert text here."></textarea>
-        </label>
-        <input type="submit" value="Send Message" id="contact-form-submit">
-        <div id="contact-form-message"></div>
-      </form>
-    </section>
-  </main>
-  <footer>
-    <div id="legal">
-      &copy; 2023 Cross Auto. All Rights Reserved.
-    </div>
-    <nav>
-      <ul>
-        <li>
-          <a href="#" class="fa fa-facebook"></a>
-        </li>
-        <li>
-          <a href="#" class="fa fa-twitter"></a>
-        </li>
-      </ul>
-    </nav>
-    <div>
-    </div>
-</footer>
-</body>
+          </label>
+          <input type="submit" value="Send Message" id="contact-form-submit" />
+          <div id="contact-form-message"></div>
+        </form>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7485.663609689499!2d-111.91623461242717!3d43.66651601699034!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x53546c26bac0d859%3A0xbf887dcc84af9018!2sRigby%2C%20ID%2083442!5e0!3m2!1sen!2sus!4v1673643988779!5m2!1sen!2sus"
+          width="600"
+          height="450"
+          style="border: 0"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+        ></iframe>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <div id="legal">&copy; 2023 Cross Auto. All Rights Reserved.</div>
+      <nav>
+        <ul>
+          <li>
+            <a href="#" class="fa fa-facebook"></a>
+          </li>
+          <li>
+            <a href="#" class="fa fa-twitter"></a>
+          </li>
+        </ul>
+      </nav>
+      <div></div>
+    </footer>
+    <script src="script/about.js"></script>
+  </body>
 </html>
