--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
         <li>
           <a href="about.html"> About </a>
         </li>
-        <li>
+        <!-- <li>
           <a href="../productListing.html"> Inventory </a>
-        </li>
+        </li> -->
         <li>
           <a href="../loanEstimator.html"> Loan Estimator </a>
         </li>
@@ -333,10 +333,10 @@
       <nav>
         <ul>
           <li>
-            <a href="#" class="fa fa-facebook"></a>
+            <!-- <a href="#" class="fa fa-facebook"></a> -->
           </li>
           <li>
-            <a href="#" class="fa fa-twitter"></a>
+            <!-- <a href="#" class="fa fa-twitter"></a> -->
           </li>
         </ul>
       </nav>
